--- a/play__content.css
+++ b/play__content.css
@@ -1,111 +1,224 @@
 .color-1 {
-    background-color: lightskyblue;
+  background-color: lightskyblue;
 }
+
 .color-alert {
-    background-color: limegreen;
+  background-color: limegreen;
 }
 
 /* Text */
 .box-1 {
-    max-width: 300px;
-    padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 300px;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
-.box-1 p, .box-1 h3, .box-1 img {
-    margin: 0;
-}
+
 .box-1x1 {
-    max-width: 300px;
-    width: 300px;
-    height: 300px;
-    padding: 10px;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 300px;
+  width: 300px;
+  height: 300px;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
-.float-item {
-    height: 60px;
-    width: 60px;
-}
+
 .box-text {
-    max-width: 300px;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
 .box-text p {
-    margin-top: 0;
-    margin-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
+
+.float-item {
+  height: 60px;
+  width: 60px;
+}
+
 .line-clamp .box-text {
-    max-height: 2.25em;
-    overflow: hidden;
+  max-height: 2.25em;
+  overflow: hidden;
 }
+
 .line-clamp-ellipsis .box-text {
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;  
-    overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
+
 .fixed {
-    position: relative;
+  position: relative;
 }
+
 .fixed .box-1 .float-item {
-    position: absolute;
-    top: 10px;
-    margin-left: -80px;
+  position: absolute;
+  top: 10px;
+  margin-left: -80px;
 }
-.absolute .box-1{
-    position: relative;
+
+.absolute .box-1 {
+  position: relative;
 }
+
 .absolute .box-1 .float-item {
-    position: absolute;
-    top: 10px;
-    left: -30px;
+  position: absolute;
+  top: 10px;
+  left: -30px;
 }
+
 .img-contain-h img {
-    max-height: 100%;
+  max-height: 100%;
 }
+
 .img-contain-w img {
-    max-width: 100%;
+  max-width: 100%;
 }
+
 .img-stretch-h img {
-    min-height: 100%;
+  min-height: 100%;
 }
+
 .img-stretch-w img {
-    min-width: 100%;
+  min-width: 100%;
 }
+
 .img-contain img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
+
 .img-scale img {
-    object-fit: scale-down;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
 }
+
 .img-cover img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-.p-m-t p {
-    margin-top: 10px;
-}
-.p-m-b p {
-    margin-bottom: 10px;
-}
-.img-m-t img {
-    margin-top: 20px;
-}
-.img-m-b img {
-    margin-bottom: 20px;
-}
+
 /* IDS */
 #p-position .play__show__content {
-    max-height: 250px;
+  max-height: 250px;
 }
-#p-image-1x1 img {
-    width: 100%;
-    height: 100%;
 
+#p-image-1x1 img {
+  width: 100%;
+  height: 100%;
 }
+
+#p-text .play__show__content {
+  max-height: 300px;
+}
+
+#p-text p, #p-text h3, #p-text img, #p-text figure {
+  margin: 0;
+  display: block;
+  position: relative;
+}
+
+#p-text img {
+  border: 1px solid darkgreen;
+}
+
+#p-text .p-text-t-t h3 {
+  color: darkred;
+}
+
+#p-text .p-text-t-t h3:not(:first-child) {
+  margin-top: 30px;
+}
+
+#p-text .p-text-t-t h3:before {
+  content: '';
+  width: 100%;
+  height: 30px;
+  background-image: repeating-linear-gradient(-45deg, transparent, darkred 1px, transparent 2px, transparent 10px);
+  position: absolute;
+  top: -30px;
+  left: 0;
+}
+
+#p-text .p-text-t-b h3 {
+  color: darkred;
+  margin-bottom: 5px;
+}
+
+#p-text .p-text-t-b h3:after {
+  content: '';
+  width: 100%;
+  height: 5px;
+  background-image: repeating-linear-gradient(45deg, transparent, darkred 1px, transparent 2px, transparent 10px);
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+}
+
+#p-text .p-text-p-t p {
+  color: darkblue;
+  margin-top: 10px;
+}
+
+#p-text .p-text-p-t p:before {
+  content: '';
+  width: 100%;
+  height: 10px;
+  background-image: repeating-linear-gradient(-45deg, transparent, darkblue 1px, transparent 2px, transparent 10px);
+  position: absolute;
+  top: -10px;
+  left: 0;
+}
+
+#p-text .p-text-p-b p {
+  color: darkblue;
+  margin-bottom: 10px;
+}
+
+#p-text .p-text-p-b p:after {
+  content: '';
+  width: 100%;
+  height: 10px;
+  background-image: repeating-linear-gradient(45deg, transparent, darkblue 1px, transparent 2px, transparent 10px);
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+}
+
+#p-text .p-text-i-t figure {
+  margin-top: 20px;
+}
+
+#p-text .p-text-i-t figure:before {
+  content: '';
+  width: 100%;
+  height: 20px;
+  background-image: repeating-linear-gradient(-45deg, transparent, darkgreen 1px, transparent 2px, transparent 10px);
+  position: absolute;
+  top: -20px;
+  left: 0;
+}
+
+#p-text .p-text-i-b figure {
+  margin-bottom: 20px;
+}
+
+#p-text .p-text-i-b figure:after {
+  content: '';
+  width: 100%;
+  height: 20px;
+  background-image: repeating-linear-gradient(45deg, transparent, darkgreen 1px, transparent 2px, transparent 10px);
+  position: absolute;
+  bottom: -20px;
+  left: 0;
+}
+/*# sourceMappingURL=play__content.css.map */
