Add informations to index.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: sans-serif;
   margin: 0;
   line-height: normal;
-  padding-bottom: 200px;
+  padding-bottom: 50px;
 }
 
 .aaa {
@@ -17,6 +17,12 @@ body {
   padding-left: 40px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
+}
+
+@media (max-width: 767px) {
+  .page-content {
+    padding: 50px 20px;
+  }
 }
 
 img {
@@ -42,6 +48,7 @@ section > .part {
 
 /* buttons */
 button, .btn {
+  font-size: 1em;
   border: 2px solid transparent;
   background-color: transparent;
   text-decoration: none;
@@ -133,23 +140,44 @@ button, .btn {
 
 .side-nav {
   position: fixed;
-  right: 10px;
-  top: 10px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
   height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  right: 10px;
+  top: 10px;
   bottom: 10px;
+  z-index: 10;
+}
+
+@media (max-width: 767px) {
+  .side-nav {
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+  }
 }
 
 .side-nav:not(.open) {
   right: -216px;
 }
 
+@media (max-width: 767px) {
+  .side-nav:not(.open) {
+    right: -226px;
+  }
+}
+
 .side-nav:not(.open) + .page-content {
   padding-right: 78px;
+}
+
+@media (max-width: 767px) {
+  .side-nav:not(.open) + .page-content {
+    padding-right: 20px;
+  }
 }
 
 .side-nav:not(.open) .btn--close {
@@ -265,6 +293,12 @@ button, .btn {
   top: 50%;
   -webkit-animation: flash 2s;
           animation: flash 2s;
+}
+
+@media (max-width: 767px) {
+  .part .part:target:before {
+    left: -2px;
+  }
 }
 
 .part *:first-child {
