--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,7 @@ body {
     font-family: sans-serif;
     margin: 0;
     line-height: normal;
-    padding-bottom: 200px;
+    padding-bottom: 50px;
 }
 
 .aaa {
@@ -16,6 +16,9 @@ body {
     padding-right: 298px;
     padding-left: 40px;
     transition: 0.2s;
+    @media (max-width: 767px)  {
+        padding: 50px 20px;
+    }
 }
 img {
     max-width: 100%;
@@ -44,6 +47,7 @@ section {
 }
 /* buttons */
 button, .btn {
+    font-size: 1em;
     border: 2px solid transparent;
     background-color: transparent;
     text-decoration: none;
@@ -121,16 +125,29 @@ button, .btn {
 
 .side-nav {
     position: fixed;
-    right: 10px;
-    top: 10px;
     transition: 0.2s;
     height: auto;
     display: flex;
+    right: 10px;
+    top: 10px;
     bottom: 10px;
+    z-index: 10;
+    @media (max-width: 767px) {
+        right: 0px;
+        top: 0px;
+        bottom: 0px;
+    }
+
     &:not(.open){
-        right: -216cd p px;
+        right: -216px;
+        @media (max-width: 767px) {
+            right: -226px;
+        }
         + .page-content {
             padding-right: 78px;
+            @media (max-width: 767px) {
+                padding-right: 20px;
+            }
         }
         .btn--close {
             background-image: url(img/list.svg);
@@ -183,6 +200,7 @@ button, .btn {
         /* margin: 0 10px; */
         position: relative;
         transition: 0.2s;
+
     }
     &__aba {
         min-height: 300px;
@@ -221,6 +239,9 @@ button, .btn {
             opacity: 0;
             top: 50%;
             animation: flash 2s;
+            @media (max-width: 767px) {
+                left: -2px;
+            }
         }
     }
     *:first-child {
