--- a/assets/style/play__content.css
+++ b/assets/style/play__content.css
@@ -163,6 +163,15 @@
   margin: 20px 0;
 }
 
+#p-image .play__show__content {
+  max-height: 320px;
+}
+
+#p-image .box-1x1 {
+  height: auto;
+  min-height: 300px;
+}
+
 #p-image-1x1 img {
   width: 100%;
   height: 100%;
