--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -60,6 +60,15 @@ button, .btn {
   cursor: pointer;
 }
 
+.img-shifter {
+  border-color: #000;
+  background-color: #fff;
+}
+
+.img-shifter:hover {
+  background-color: #f1f1f1;
+}
+
 .btn--ex {
   background-color: cyan;
   border-radius: 30px;
