--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -254,6 +254,20 @@ button, .btn {
             }
         }
     }
+    h3:target:before {
+        content: '';
+        display: block;
+        position: absolute;
+        border: 10px solid transparent;
+        
+        left: -5px;
+        opacity: 0;
+        top: 50%;
+        animation: flash 2s;
+        @media (max-width: 767px) {
+            left: -2px;
+        }
+    }
     *:first-child {
         margin-top: 0;
     }
@@ -299,9 +313,14 @@ button, .btn {
             margin-top: -35px;
             margin-bottom: 35px;
             // opacity: 0;
-            .part:target:before {
+            .part:target:before, h3:target:before {
                 border-bottom-color: #000;
+                
             }
+            h3:target:before {
+                margin-top: 0;
+            }
+
         }
     }
     &__content {
@@ -395,4 +414,4 @@ button, .btn {
     10% {opacity: 1;}
     50% {opacity: 1;}
     100% {opacity: 0;}
-  }
+}
